@@ -247,7 +247,7 @@
     <webpage>http://live.gnome.org/EyeOfGnome</webpage>
     <maintainer id="lucasr"/>
     <scmmodule>eog</scmmodule>
-    <branch id="HEAD" stringfrozen="true">
+    <branch id="HEAD">
       <domain id="po">
         <_description>UI translations</_description>
       </domain>
@@ -260,6 +260,7 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>  
   <module id="eog-plugins">
     <branch id="HEAD"/>
@@ -1583,6 +1584,7 @@
     <bugs-product>totem</bugs-product>
     <bugs-component>playlist parser</bugs-component>
     <branch id="HEAD"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="tracker">
     <branch id="HEAD"/>
@@ -1614,11 +1616,12 @@
     <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="zenity">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <!-- Non-GNOME modules -->
   <module id="gnucash">
