@@ -556,7 +556,7 @@
       <module id="deskbar-applet"/>
       <module id="eel"/>
       <module id="ekiga" branch="gnome-2-20"/>
-      <module id="eog"/>
+      <module id="eog" branch="gnome-2-22"/>
       <module id="epiphany" branch="gnome-2-22"/>
       <module id="evince"/>
       <module id="evolution"/>
@@ -616,12 +616,12 @@
       <module id="swfdec-gnome"/>
       <module id="tomboy"/>
       <module id="totem" branch="gnome-2-22"/>
-      <module id="totem-pl-parser"/>
+      <module id="totem-pl-parser" branch="gnome-2-22"/>
       <module id="vinagre"/>
       <module id="vino"/>
       <module id="vte"/>
       <module id="yelp"/>
-      <module id="zenity"/>
+      <module id="zenity" branch="gnome-2-22"/>
     </category>
     <category id="admin">
       <_description>Administration Tools</_description>
