@@ -1,3 +1,8 @@
+2008-03-10  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: totem-pl-parser, zenity and eog branched for 2.22.
+
 2008-03-06  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
